--- a/portfolio-details1.html
+++ b/portfolio-details1.html
@@ -97,12 +97,14 @@
             <div class="portfolio-description">
               <h2>評分：🌕🌕🌕🌕🌕／5</h2>
               <p>
-                男女主的設定完全就是理想中的情人，有顏值、有智商、有情商 男主肖奈真的好帥，每次看他出場都在內心尖叫😍
-
-整部劇沒有誤會、沒有失憶、沒有難忘的前任、沒有惱人的表妹or未婚妻、沒有難搞的父母，只有灑不完的糖🍭💕 這部我真的太喜歡了，當初看完還馬上二刷！
-
-如果不喜歡遊戲劇情，堅持一下撐過前面幾集就很少出現了！看完這部後，我也看了很多好看的校園愛情劇，但這部始終在我心中的第一名屹立不搖
-沒看過的一定要看！！
+                男女主的設定完全就是理想中的情人，有顏值、有智商、有情商
+              </p>  
+              <p> 
+              整部劇沒有誤會、沒有失憶、沒有難忘的前任、沒有惱人的表妹or未婚妻、沒有難搞的父母，只有灑不完的糖🍭💕 這部我真的太喜歡了，當初看完還馬上二刷！
+              </p>
+              <p> 
+              如果不喜歡遊戲劇情，堅持一下撐過前面幾集就很少出現了！看完這部後，我也看了很多好看的校園愛情劇，但這部始終在我心中的第一名屹立不搖
+              沒看過的一定要看！！
               </p>
             </div>
           </div>
