--- a/portfolio-details5.html
+++ b/portfolio-details5.html
@@ -98,9 +98,10 @@
             <div class="portfolio-description">
               <h2>評分：🌕🌕🌕🌕🌑／4</h2>
               <p>
-                這部劇著重於友情，他們是一群來自不同國家的人，因此有著不同的價值觀，但他們成為了朋友，並且很有義氣地一起面對並解決許多困境，劇情溫馨且搞笑，很適合全家憶起看！
-
-劇中還出現各式各樣美味的菜餚🥘，很適合下飯，可以邊吃年夜飯邊觀看～
+                這部劇著重於友情，他們是一群來自不同國家的人，因此有著不同的價值觀，但他們成為了朋友，並且很有義氣地一起面對並解決許多困境，劇情溫馨且搞笑，很適合全家一起看！
+              </p>
+              <p>
+                劇中還出現各式各樣美味的菜餚🥘，很適合下飯，可以邊吃年夜飯邊觀看～
 
               </p>
             </div>
