--- a/portfolio-details6.html
+++ b/portfolio-details6.html
@@ -98,9 +98,10 @@
             <div class="portfolio-description">
               <h2>評分：🌕🌕🌕🌕🌖／4.8</h2>
               <p>
-                超喜歡鳳九跟帝君！這部終於彌補了十里桃花裡的遺憾，劇情甜虐交加 個人更喜歡這部劇裡的妝容
-
-鳳九依舊可愛，帝君也變得更有愛了😍
+                是超喜歡鳳九跟帝君！這部終於彌補了十里桃花裡的遺憾，劇情甜虐交加 個人更喜歡這部劇裡的妝容
+              </p>
+              <p>  
+                鳳九依舊可愛，帝君也變得更有愛了😍
 
               </p>
             </div>
