--- a/portfolio-details8.html
+++ b/portfolio-details8.html
@@ -99,10 +99,12 @@
               <h2>評分：🌕🌕🌕🌕🌕／5</h2>
               <p>
                 劇情跟《想見你》有點像，也是平行時空，但感覺這部比較沒那麼複雜，好懂一些
-
-男主一直默默地守護著女主，女主卻不知道，真的超愛也超心疼，還好女主後來有回到過去才知道男主做的那些事 另外希望電影能有個好結局🙏
-
-全世界最好的張萬森 拜託去看！！
+              </p>
+              <p>  
+                男主一直默默地守護著女主，女主卻不知道，真的超愛也超心疼他，還好女主後來有回到過去才知道男主做的那些事 另外希望電影能有個好結局🙏
+              </p>
+              <p>  
+                全世界最好的張萬森 拜託去看！！
               </p>
             </div>
           </div>
